[tool.poetry]
name = "topological-script"
version = "0.1.0"
description = ""
authors = ["Ivan Mikhailov <mikhailov.ivan.imc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.3"
sympy = "^1.12"
networkx = "^3.4.2"
update = "^0.0.1"
matplotlib = "^3.10.0"
scipy = "^1.15.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^23.12.1"
isort = "^5.13.2"
mypy = "^1.8.0"
ruff = "^0.1.14"
eval = "^0.0.5"
sympy = "^1.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
